crates/cli/tests/snapshots/snapshot_tests__json_unlisted_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [
    {
      "package_name": "chalk",
      "imported_from": [
        {
          "path": "src/cli.ts",
          "line": 2,
          "col": 0
        }
      ],
      "actions": [
        {
          "type": "install-dependency",
          "auto_fixable": false,
          "description": "Add this package to dependencies in package.json",
          "note": "Verify this package should be a direct dependency before adding"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"chalk\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "chalk"
        }
      ]
    }
  ],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": []
}
